--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nbl-next-template",
+  "name": "reading-camp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "auth:generate": "npx @better-auth/cli generate",
-    "db:generate": "npx drizzle-kit generate",
-    "db:migrate": "npx drizzle-kit migrate",
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate dev",
+    "db:push": "npx prisma db push",
     "test": "jest",
     "test:watch": "jest --watch"
   },
