--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
+  "prisma": {
+    "schema": "./prisma/schema"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-label": "^2.1.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -26,7 +30,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -42,7 +47,9 @@
     "eslint-config-next": "15.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prisma": "^6.7.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.8.2",
     "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
