--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,27 +34,27 @@ services:
     networks:
       - backend
 
-  # redis:
-  #   image: "redis:7.2-alpine"
-  #   restart: unless-stopped
-  #   ports:
-  #     - "6379:6379"
-  #   volumes:
-  #     - ./redis-data:/data
-  #   command: redis-server --save 60 1 --loglevel warning --requirepass redisPrismaNaver2025@
-  #   environment:
-  #     - REDIS_PASSWORD=redisPrismaNaver2025@
-  #     - REDIS_HOST=localhost
-  #     - REDIS_PORT=6379
-  #   healthcheck:
-  #     test: ["CMD", "redis-cli", "-a", "redisPrismaNaver2025@", "ping"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 3
-  #   security_opt:
-  #     - no-new-privileges:true
-  #   networks:
-  #     - backend
+  redis:
+    image: "redis:7.2-alpine"
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis-data:/data
+    command: redis-server --save 60 1 --loglevel warning --requirepass redisPrismaNaver2025@
+    environment:
+      - REDIS_PASSWORD=redisPrismaNaver2025@
+      - REDIS_HOST=localhost
+      - REDIS_PORT=6379
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "redisPrismaNaver2025@", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    security_opt:
+      - no-new-privileges:true
+    networks:
+      - backend
 
 networks:
   backend:
