--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/components": "^0.0.41",
     "@remixicon/react": "^4.6.0",
     "@stagewise/toolbar-next": "^0.1.2",
+    "@tosspayments/tosspayments-sdk": "^2.3.5",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
