--- a/package.json
+++ b/package.json
@@ -42,12 +42,21 @@
     "@react-email/components": "^0.0.41",
     "@remixicon/react": "^4.6.0",
     "@stagewise/toolbar-next": "^0.1.2",
+    "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-bold": "^2.14.0",
+    "@tiptap/extension-italic": "^2.14.0",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "@tosspayments/tosspayments-sdk": "^2.3.5",
+    "@types/dompurify": "^3.2.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
+    "isomorphic-dompurify": "^2.25.0",
     "lucide-react": "^0.488.0",
     "mime-types": "^3.0.1",
     "next": "15.3.2",
