--- a/package.json
+++ b/package.json
@@ -54,12 +54,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "isomorphic-dompurify": "^2.25.0",
     "lucide-react": "^0.488.0",
     "mime-types": "^3.0.1",
-    "next": "15.3.2",
+    "next": "^15.3.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
