--- a/package.json
+++ b/package.json
@@ -71,9 +71,13 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "isomorphic-dompurify": "^2.25.0",
     "lucide-react": "^0.488.0",
     "mime-types": "^3.0.1",
+    "motion": "^12.23.12",
     "next": "^15.3.5",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
