--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "reset-user-scores": "tsx scripts/reset-user-scores.ts",
     "reset-payments": "tsx scripts/reset-payments.ts",
     "restore-backup": "tsx scripts/restore-backup.ts",
-    "setup-test-accounts": "tsx scripts/setup-test-accounts-maintenance.ts"
+    "setup-test-accounts": "tsx scripts/setup-test-accounts-maintenance.ts",
+    "backfill-iscorrect": "tsx scripts/backfill-iscorrect.ts"
   },
   "prisma": {
     "schema": "./prisma/schema",
@@ -56,6 +57,8 @@
     "@react-email/components": "^0.0.41",
     "@remixicon/react": "^4.6.0",
     "@stagewise/toolbar-next": "^0.1.2",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@tiptap/core": "^2.14.0",
     "@tiptap/extension-bold": "^2.14.0",
     "@tiptap/extension-italic": "^2.14.0",
