--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reset-payments": "tsx scripts/reset-payments.ts",
     "restore-backup": "tsx scripts/restore-backup.ts",
     "setup-test-accounts": "tsx scripts/setup-test-accounts-maintenance.ts",
+    "grant-100y-sub": "tsx scripts/grant-100-year-subscription.ts",
     "backfill-iscorrect": "tsx scripts/backfill-iscorrect.ts",
     "backfill-score-transactions": "tsx prisma/migrations/backfill-score-transactions.ts"
   },
