--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@internationalized/date": "^3.8.1",
     "@prisma/client": "^6.9.0",
@@ -58,7 +61,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/components": "^0.0.41",
-    "@remixicon/react": "^4.6.0",
+    "@remixicon/react": "^4.7.0",
     "@stagewise/toolbar-next": "^0.1.2",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
@@ -87,15 +90,16 @@
     "next": "^15.3.5",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^9.11.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "redis": "^5.1.0",
     "resend": "^4.5.1",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
