--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/noto-sans": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
@@ -35,6 +36,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.68.0",
     "react-native": "0.81.5",
+    "react-native-iap": "^14.6.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
