--- a/mobile/app.json
+++ b/mobile/app.json
@@ -14,7 +14,13 @@
       "backgroundColor": "#fcf3e6"
     },
     "ios": {
+      "bundleIdentifier": "com.reading-champ",
+      "buildNumber": "1",
       "supportsTablet": true,
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "infoPlist": {
+        "NSUserTrackingUsageDescription": "This identifier will be used to deliver personalized ads to you."
+      },
       "splash": {
         "image": "./assets/images/splash.png",
         "resizeMode": "cover",
@@ -22,6 +28,9 @@
       }
     },
     "android": {
+      "package": "com.readingchamp_android",
+      "versionCode": 1,
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#fcf3e6"
@@ -31,6 +40,11 @@
         "resizeMode": "cover",
         "backgroundColor": "#fcf3e6"
       },
+      "permissions": [
+        "INTERNET",
+        "RECEIVE_BOOT_COMPLETED",
+        "VIBRATE"
+      ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
