--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.8.3",
+    "@react-native-firebase/messaging": "^23.8.3",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
