--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "expo": "^54.0.30",
+    "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
