--- a/mobile/app.json
+++ b/mobile/app.json
@@ -68,7 +68,7 @@
         "expo-build-properties",
         {
           "ios": {
-            "useFrameworks": "static"
+            "useFrameworks": "dynamic"
           }
         }
       ],
