--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "expo": "^54.0.30",
     "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.12",
@@ -42,6 +43,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.68.0",
     "react-native": "0.81.5",
+    "react-native-big-calendar": "^4.19.0",
+    "react-native-calendars": "^1.1314.0",
     "react-native-iap": "^14.6.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-render-html": "^6.3.4",
